# homepage

./: .env.example  .gitignore  Cargo.toml  Makefile  README  build.rs  components.json  index.html
locales/: id_salt.txt  mf2_i18n.toml
locales/en/: homepage.mf2
locales/es/: homepage.mf2
src/: app.rs  config.rs  i18n.rs  main.rs  support_contact.rs
src/components/: mod.rs  page_bullet_link.rs  page_footer.rs  page_layout.rs  page_link.rs  page_loader.rs  page_locale_menu.rs  page_marker_text.rs  page_nav.rs  page_network_graph.rs  page_nostr_key.rs  page_section.rs  page_text.rs  page_text_link.rs
src/components/ui/: mod.rs
src/components/ui/_kit/: kit.json  kit.lock.json
src/features/: mod.rs
src/features/contact/: submission.rs
src/features/nostr/: browser.rs
src/layout/: footer.rs  mod.rs  nav.rs
src/nostr/: browser.rs
src/routes/: contact.rs  home.rs  mod.rs  not_found.rs
src/routes/localised/: mod.rs  path.rs
styles/: app.css  kit.css
