[workspace]
resolver = "2"

[package]
name = "radroots_homepage"
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "AGPL-3.0-or-later"
description = "Web homepage for Radroots"
publish = false

[dependencies]
leptos = { version = "0.9.0-alpha", features = ["csr"] }
leptos_router = "0.9.0-alpha"

[lints.rust]
unsafe_code = "forbid"
