[workspace]
resolver = "2"

[package]
name = "radroots_homepage"
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "AGPL-3.0-or-later"
description = "Web homepage for Radroots"
publish = false
build = "build.rs"

[dependencies]
gloo-net = "0.6"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.9.0-alpha", features = ["csr"] }
leptos-lucide-rs = { git = "https://github.com/triesap/leptos-lucide-rs.git", rev = "22529de7af2566d0508bc8ed54155f810ff6860b", version = "0.3.0" }
leptos_router = "0.9.0-alpha"
mf2_i18n = { git = "https://github.com/triesap/mf2_i18n.git", rev = "c0fcdcd1b3c45e49d7e36bcdd0a066dacfc2199a", version = "0.1.0", default-features = false, features = ["leptos"] }
nostr-browser-signer = { git = "https://github.com/rust-nostr/nostr.git", rev = "e6d23719e82a50c62ecafc8569c116a3c98ce4bc", version = "0.45.0-alpha.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
dotenvy = "0.15.7"
mf2_i18n = { git = "https://github.com/triesap/mf2_i18n.git", rev = "c0fcdcd1b3c45e49d7e36bcdd0a066dacfc2199a", version = "0.1.0", default-features = false, features = ["build"] }

[lints.rust]
unsafe_code = "forbid"
